--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Task Organizer</string>
+    <string name="facebook_app_id">275681046224671</string>
+    <string name="fb_login_protocol_scheme">fb275681046224671</string>
     <string-array name="reminder_time_spans">
         <item>At time of task</item>
         <item>1 Hour Before</item>
@@ -32,4 +34,18 @@
         <item>1814400</item>
         <item>2419200</item>
     </integer-array>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
